--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <title>Weather Dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <header class="row justify-content-center text-white bg-primary mb-3">
+      <h1>Wather Dashboard</h1>
+    </header>
+  </body>
 </html>
