--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <header class="row justify-content-center text-white bg-primary mb-3">
-      <h1>Wather Dashboard</h1>
+      <h1>Weather Dashboard</h1>
     </header>
+    <div class= "row">
   </body>
 </html>
