--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
       <h1>Weather Dashboard</h1>
     </header>
     <div class= "row">
-  </body>
+      <aside class="col-12 col-lg-3 card text-white bg-secondary mb-3" style="height: 600px;">
+        <section>
+          <form id="search-form" class="row justify-content-center">
+            <h2>Search for a City:</h2>
+            <input type="search" placeholder="eg.Hartford">
+          </form>
+        </section>
+      </body>
 </html>
