added search section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
           <form id="search-form" class="row justify-content-center">
             <h2>Search for a City:</h2>
             <input type="search" placeholder="eg.Hartford">
+            <button class="btn btn-primary">Search</button>
           </form>
         </section>
+        <section id="prev-search" class="row justify-content center"></section>
+       </aside>
+       <main class="col-12 col-lg-9">
+         <section id="current-date">
+           <h2 class="col-auto"></h2>
+           <img class="col-auto">
+         </section>
+         <p></p>
+         <p></p>
+         <p></p>
+         <p></p>
+        </section>
+       </main>
+        
       </body>
 </html>
