added title class

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
          <p></p>
          <p></p>
         </section>
+        <h3 id="forecast-title" style="visibility:hidden">5 Day Forecast:</h3>
+        <section id="5-day-forecast" class="row justify-content-center">
+          <section
        </main>
         
       </body>
