added column section class

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         </section>
         <h3 id="forecast-title" style="visibility:hidden">5 Day Forecast:</h3>
         <section id="5-day-forecast" class="row justify-content-center">
-          <section
+          <section class="col-12 col-md-6 col-lg-2">
+            <h5></h5>
+            <img>
+            <p></p>
+            <p></p>
+            <p></p>
+          </section>
        </main>
         
       </body>
